# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.207 2011/12/02 07:26:25 mb Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.13 (????/??/??)
 - 2011-12-02 Fixed bug#5086 - Emails with a long subject are not handled.
 - 2011-11-21 Use the secure attribute to restrict coookies to HTTPS if it is used.
 - 2011-11-21 Fixed bug#7909 - Errors should be logged in web server error log only.
 - 2011-11-10 Fixed bug#7879 - Ticket forward not working if content-id exists.
 - 2011-11-07 Fixed bug#7362 - AuthSyncModule::LDAP::UserSyncMap with multiple auth backends.
 - 2011-11-02 Fixed bug#7465 - Out-of-office unlock does not work upon customer's web reply.
 - 2011-10-21 Fixed bug#7845 - No DispatchMultiple Method in rpc.pl script.

2.4.12 (2011/10/18)
 - 2011-09-22 Fixed bug#7776 - Double encoding for AJAX responses on ActiveState perl.

2.4.11 (2011/08/16)
 - 2011-07-28 Fixed bug#7518 - Escalation Notify by not working properly.
 - 2011-05-09 Fixed bug#7010 - Latest version of PDF::API2 no longer includes DejaVu fonts.
    Fixed by including DejaVu fonts in var/fonts.
 - 2011-04-26 Fixed bug#7250 - Add new queue mask crashes on PostgreSQL and MS SQL Server.
 - 2011-04-07 Fixed bug#7195 - Graphs doesn't use GIF as fallback if PNG is not available.

2.4.10 (2011/04/12)
 - 2011-04-04 Fixed bug#7140 - Attachments with percent symbol not working.
 - 2011-03-23 Updated Brazilian Portugese translation, thanks to Murilo Moreira de Oliveira!
 - 2011-03-18 Added required settings for oracle databases in apache2-httpd-new.include.conf.
 - 2011-03-07 Fixed bug#6014 - Printed pdf tickets are not searchable.
 - 2011-02-17 Fixed bug#6906 - Vendor URL points to Basename+URL instead of URL.