@@ -1,8 +1,8 @@
 # --
 # CHANGES - change log of OTRS
-# Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.207 2011/12/02 07:26:25 mb Exp $
+# $Id: CHANGES,v 1.993.2.208 2012/02/09 15:02:58 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.4.13 (????/??/??)
+ - 2011-12-09 Fixed bug#7997 - Fetching mail via AdminMailAccount does not work.
  - 2011-12-02 Fixed bug#5086 - Emails with a long subject are not handled.
  - 2011-11-21 Use the secure attribute to restrict coookies to HTTPS if it is used.
  - 2011-11-21 Fixed bug#7909 - Errors should be logged in web server error log only.
